--- a/users_service/package.json
+++ b/users_service/package.json
@@ -1,6 +1,15 @@
 {
+  "name": "comment_service",
+  "version": "1.0.0",
+  "main": "index.js",
+  "scripts": {
+    "test": "echo \"Error: no test specified\" && exit 1",
+    "start": "ts-node src/app.ts",
+    "dev": "ts-node-dev src/app.ts"
+  },
   "dependencies": {
     "body-parser": "^1.20.3",
+    "comment_service": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
