--- a/users_service/package.json
+++ b/users_service/package.json
@@ -8,6 +8,7 @@
     "dev": "ts-node-dev src/app.ts"
   },
   "dependencies": {
+    "axios": "^1.7.9",
     "body-parser": "^1.20.3",
     "comment_service": "file:",
     "cors": "^2.8.5",
