--- a/users_service/tsconfig.json
+++ b/users_service/tsconfig.json
@@ -6,7 +6,7 @@
     "rootDir": "./src", 
     "esModuleInterop": true,
     "skipLibCheck": true,
-    "strict": true
+    "strict": false
   },
   "include": ["src/**/*"], 
   "exclude": ["node_modules", "dist"]
