Inicio de HTML y JS

--- a/comment_service/.env
+++ b/comment_service/.env
@@ -1,2 +1,3 @@
-MONGO_URI=mongodb://127.0.0.1:27017/commentsDB
+MONGO_URI=mongodb://lp:lp@127.0.0.1:27017/commentsDB
 PORT=4000
+#COMMENTS_SERVICE_URL=http://localhost:4000/api/comments
