--- a/users_service/package.json
+++ b/users_service/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "comment_service",
+  "name": "users_service",
   "version": "1.0.0",
   "main": "index.js",
   "scripts": {
@@ -10,11 +10,12 @@
   "dependencies": {
     "axios": "^1.7.9",
     "body-parser": "^1.20.3",
-    "comment_service": "file:",
     "cors": "^2.8.5",
     "dotenv": "^16.4.7",
     "express": "^4.21.2",
-    "mongoose": "^8.9.0"
+    "mongodb": "^6.12.0",
+    "mongoose": "^8.9.2",
+    "users_service": "file:"
   },
   "devDependencies": {
     "@types/cors": "^2.8.17",
